--- a/estrutura.css
+++ b/estrutura.css
@@ -191,3 +191,58 @@ footer
     text-align: center;
     padding-bottom: 40px;
 }
+
+@media (max-width: 768px) 
+{
+    .conteudo section h1 
+    {
+        font-size: 1.5rem;
+        padding-top: 20px;
+    }
+    
+    .conteudo section p 
+    {
+        font-size: 0.9rem;
+        margin: 20px auto;
+        padding: 15px;
+    }
+    
+    .video 
+    {
+        padding: 0 10px 20px;
+    }
+    
+    .container-header 
+    {
+        gap: 15px;
+        padding: 0 10px;
+    }
+    
+    .menu 
+    {
+        gap: 20px;
+    }
+    
+    .menu a 
+    {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) 
+{
+    .menu 
+    {
+        gap: 15px;
+    }
+    
+    .menu a {
+        font-size: 14px;
+    }
+    
+    .footer-container 
+    {
+        gap: 30px;
+        flex-direction: column;
+    }
+  }
